Change column type to category
